# mcbe_shader_redirector

./: Cargo.toml  README.md  README.txt
.github/workflows/: build.yml  release.yml
assets/: lightmapUtil_10023_11020.glsl  lightmapUtil_10023_13028.glsl  lightmapUtil_11020_13028.glsl  lightmapUtil_13028_11020.glsl
hooks/: Cargo.toml  build.rs
hooks/src/: .lib.rs.rustfmt  aasset_warcrimes.rs  android.rs  common.rs  lib.rs  mc_utils.rs
mc_rpfs/: Cargo.toml
mc_rpfs/src/: lib.rs
plt-rs/: Cargo.toml  README.md
plt-rs/src/: android_view.rs  lib.rs  unix_view.rs
plt-rs/src/unix/: long.rs  mod.rs  small.rs
src/: common.rs  hooking.rs  lib.rs  mc_utils.rs
src/platform/: errors.rs  mod.rs  none.rs
src/platform/android/: hooks.rs  mod.rs  storage.rs
