#cargo-features = ["trim-paths"]
[package]
name = "mcbe_r"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.137"
notify = "6.1.1"
crossbeam-channel = "0.5.11"
once_cell = "1.19.0"
android_logger = {version = "0.13.3", default-features = false}
log = "0.4.20"
ndk-sys = "0.6.0"
serde_json = { version = "1.0.113", features = ["preserve_order"] }
serde = { version = "1.0.196", features = ["derive"] }
ctor = "0.2.6"
plt-rs = "0.2.0"
backtrace = "0.3.71"
thiserror = "1.0.61"
ndk = { version = "0.9.0", default-features = false }
walkdir = { version = "2.5.0", default-features = false }
libmaterial = { version = "0.1.0", path = "../mt-updater" }
scroll = "0.12.0"





[lib]
crate-type = ["cdylib"]

#[profile.perf]
#trim-paths = "all"
