[package]
name = "mcbe_r"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plt-rs = { git = "https://github.com/mcbegamerxx954/plt-rs.git" }
libc = "0.2.137"
notify = "6.1.1"
crossbeam-channel = "0.5.11"
once_cell = "1.19.0"
android_logger = {version = "0.13.3", default-features = false}
log = "0.4.20"
ndk-sys = "0.5.0"
serde_json = { version = "1.0.113", features = ["preserve_order"] }
serde = { version = "1.0.196", features = ["derive"] }
app_dirs2 = { version = "2.5.5", optional = true }
jni = { version = "0.21.1", optional = true }
ndk-context = { version = "0.1.1", optional = true }

# I will get rid of you one day.
jni-sys = "0.3.0"

[features]
default = ["dynamic_path"]
dynamic_path = ["dep:jni", "dep:app_dirs2", "dep:ndk-context"]

[lib]
crate-type = ["cdylib"]
