#cargo-features = ["trim-paths"]
[package]
name = "mcbe_r"
version = "0.1.10"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.137"
android_logger = {version = "0.15.0", default-features = false}
log = "0.4.20"
ndk-sys = "0.6.0"
walkdir = { version = "2.5.0", default-features = false }
materialbin = { version = "0.1.1", git = "https://github.com/mcbegamerxx954/materialbin" }
scroll = "0.12.0"
jni = "0.21.1"
plt-rs = "0.3.0"
libloading = "0.8.5"
page_size = "0.6.0"
json-strip-comments = "1.0.4"
tinyjson = "2.5.1"
ctor = { version = "0.4.1", default-features = false }
notify = "8.0.0"
bhook = "0.1.2"
ndk = "0.9.0"
memchr = "2.7.5"
thread-priority = "3.0.0"





[lib]
crate-type = ["cdylib"]

#[profile.perf]
#trim-paths = "all"
