[package]
name = "android_impl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plt-rs = "0.1.0"
libc = "0.2.137"
notify = "6.1.1"
mc_rpfs = {path = "../mc_rpfs"}
crossbeam-channel = "0.5.11"
once_cell = "1.19.0"
android_logger = {version = "0.13.3", default-features = false}
log = "0.4.20"
ndk-sys = "0.5.0"
jni = "0.21.1"
serde_yaml = "0.9.30"
app_dirs2 = "2.5.5"
ndk-context = "0.1.1"
ctor = "0.2.6"
#jni = "0.21.1"
#ndk-context = "0.1.1"
#backtrace = "0.3.69"

[lib]
crate-type = ["cdylib"]
