[package]
name = "mcbe_r"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plt-rs = "0.1.0"
libc = "0.2.137"
notify = "6.1.1"
crossbeam-channel = "0.5.11"
once_cell = "1.19.0"
android_logger = {version = "0.13.3", default-features = false}
log = "0.4.20"
ndk-sys = "0.5.0"
jni = "0.21.1"
app_dirs2 = "2.5.5"
ndk-context = "0.1.1"
serde_json = { version = "1.0.111", features = ["preserve_order"] }
serde = { version = "1.0.195", features = ["derive"] }
thiserror = "1.0.56"
serde_yaml = "0.9.31"

[lib]
crate-type = ["cdylib"]
