[package]
name = "mc_rpfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#app_dirs2 = "2.5.5"
crossbeam-channel = "0.5.11"
log = "0.4.20"
notify = "6.1.1"
#ctor = "0.2.6"
#fxhash = "0.2.1"
#notify = "6.1.1"
#origin = "0.17.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = { version= "1.0.108", features = ["preserve_order"] } 
serde_yaml = "0.9.30"
thiserror = "1.0.53"
